# Salvo-Vue

./: Makefile
backend/: Cargo.toml
backend/src/: main.rs
backend/src/controller/: auth_controller.rs  employee_controller.rs  license_controller.rs  mod.rs
backend/src/globals/: memory_session.rs  mod.rs
backend/src/middleware/: memory_store.rs  mod.rs  session_middleware.rs
backend/src/routes/: frontend_route.rs  mod.rs  open_routes.rs  protected_routes.rs
frontend/: bun.lockb  vite.config.ts
frontend/src/: App.vue
frontend/src/components/: HelloWorld.vue  Link.vue  Router.vue
