[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { version = "0.68.4", features = ["serve-static", "oapi", "session", "proxy"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
cargo-watch = "8.4.1"
dotenv = "0.15.0"
async-lock = "3.3.0"
async-session = "3.0.0"
lazy_static = "1.4.0"